src/app/app-two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-two
  namespace: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-two
  template:
    metadata:
      labels:
        app: aks-helloworld-two
    spec:
      containers:
        - name: aks-helloworld-two
          image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-two
  namespace: main
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: aks-helloworld-two
