src/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: main
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - daveakslab.azure.com
  #     secretName: ingress-tls-csi
  rules:
    # - host: daveakslab.azure.com
    - http:
      paths:
        - path: /hello-world-one(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld-one
              port:
                number: 80
        - path: /hello-world-two(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld-two
              port:
                number: 80
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld-one
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  namespace: main
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /static(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld-one
                port:
                  number: 80
